# Epistemotron

./: .gitignore  BreakpointDlg.cpp  BreakpointDlg.h  CLAUDE.md  CMakeLists.txt  CREATE_DIALOG_INSTRUCTIONS.md  ChildFrm.cpp  ChildFrm.h  ClassView.cpp  ClassView.h  CustomScenarioDlg.cpp  CustomScenarioDlg.h  Epistemotron.aps  Epistemotron.cpp  Epistemotron.h  Epistemotron.rc  Epistemotron.sln  Epistemotron.vcxproj  Epistemotron.vcxproj.filters  EpistemotronDoc.cpp  EpistemotronDoc.h  EpistemotronView.cpp  EpistemotronView.h  FileView.cpp  FileView.h  IMPROVEMENTS.md  MainFrm.cpp  MainFrm.h  OutputWnd.cpp  PROGRESS.md  Picture.cpp  Picture.h  PropertiesWnd.cpp  README.md  Resource.aps  Resource.h  Resource.rc  SESSION_SUMMARY.md  SimConfigDlg.cpp  SimConfigDlg.h  (+5 more)
GPU/: CPUGravitySolver.cpp  CPUGravitySolver.h  CUDAGravitySolver.cpp  CUDAGravitySolver.h  GravitySolverFactory.cpp  IGravitySolver.h  OpenCLGravitySolver.cpp  OpenCLGravitySolver.h
Science/: Environment.h  Mass.cpp  Mass.h  Simulator.cpp  Simulator.h  Universe.cpp  Universe.h  test_simulation.cpp
Simulation/: Environment.h  Mass.cpp  Mass.h  Simulation.h  Simulator.cpp  Simulator.h  Universe.cpp  Universe.h
res/: Epistemotron.rc2  app.manifest
tests/: main.cpp
x64/Debug/: Epistemotron.res  vc142.idb
x64/Debug/Epistemotron.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Epistemotron.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
x64/Release/: Epistemotron.res
x64/Release/Epistemotron.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Epistemotron.lastbuildstate  Epistemotron.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
